Fixed alignment issue for desktop place styles.

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,5 +2,15 @@
 	font-size: 14px;
 	line-height: 16px;
 	font-weight: 400; 
-	margin: 0; 
+	margin: 0;
+	max-width: 320px;
+}
+
+@media screen and (min-width: 768px) {
+	
+	.cover__subtitle {
+		font-size: 18px;
+		line-height: 22px;
+	}
+	
 }
