--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,5 +2,15 @@
 	font-size: 32px;
 	line-height: 35px;
 	font-weight: 900; 
-	margin: 0 0 16px 0; 
+	margin: 0 0 16px 0;
+}
+
+@media screen and (min-width: 768px) {
+	
+	.cover__title {
+		font-size: 72px;
+		line-height: 76px;
+		margin: 0 0 32px 0; 
+	}
+	
 }
